Fixed github contact info cut off

--- a/src/components/Contact.css
+++ b/src/components/Contact.css
@@ -66,7 +66,8 @@ a {
 
 @media (max-width: 600px) {    
     .contact-container {
-        min-height: 130vh;
+        min-height: auto;
+        padding-bottom: 50px;
     }
     
     .contact-container h2.title {
@@ -82,9 +83,5 @@ a {
         display: flex;
         flex-direction: column;
         justify-items: center;
-    }
-
-    .layout {
-        margin-bottom: -75px;
     }
 }
